# ringlight

./: .gitmodules  LICENSE  README.md
case/: case.FCStd  spacer1.FCStd  spacer2.FCStd
fw/: CMakeLists.txt  load.sh  main.cpp
fw/usb/: tusb_config.h  usb_descriptors.c  usbtmc_app.c  usbtmc_app.h
lens/: filter.step  lens.FCStd  lens.step
pcb/: .gitignore  fp-lib-table  ringlight.kicad_pcb  ringlight.kicad_pro  ringlight.kicad_sch  ringlight_ctrl.kicad_pcb  ringlight_ctrl.kicad_pro  ringlight_ctrl.kicad_sch
pcb/flatwiresolder.pretty/: conn_01x10.kicad_mod
pcb/lens.pretty/: filter.kicad_mod  lens.kicad_mod
py/: test.py  test_led.py
